# ani-stream

./: README.md  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/retry/: Cargo.toml
src-tauri/retry/src/: lib.rs
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/spider/: mod.rs  model.rs  spider.rs
src/bindings/: Item.ts  ItemPage.ts
src/components/: AnimeList.vue
src/mock/: animeData.ts
src/router/: index.ts
src/types/: anime.ts
src/views/: HomeView.vue  PlayerView.vue
