[package]
name = "ani-stream"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ani_stream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
retry = { path = "retry" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10.1.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
] }
scraper = "0.22.0"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["macros", "rt"] }
regex = "1.11.1"
state = "0.6.0"
